man-db (2.5.6-5) UNRELEASED; urgency=low

  * Remove Ubuntu buildd hack now that the Ubuntu buildd chroots preseed
    man-db/auto-update=false (thanks, LaMont Jones).

 -- Colin Watson <cjwatson@debian.org>  Tue, 17 Nov 2009 18:56:33 -0600

man-db (2.5.6-4) unstable; urgency=low

  * Backport from trunk:
    - If the locale encoding is ASCII, then use the ascii device even if
      preconv is available; it will do a better job than producing UTF-8
      output and then recoding that to ASCII (closes: #547695).
    - Include <unistd.h> in src/encodings.c for dup and STDIN_FILENO
      (closes: #553623).
    - When invoking col, ensure that LC_CTYPE is set to an appropriate
      locale for the selected character set (closes: #555331).
  * Add man-db/auto-update debconf template, which may be preseeded to false
    to disable rebuilding the database when man-db is triggered (closes:
    #554914).

 -- Colin Watson <cjwatson@debian.org>  Tue, 10 Nov 2009 11:58:25 +0000

man-db (2.5.6-3) unstable; urgency=low

  * Don't try to change I/O priority in an OpenVZ container (closes:
    #546680). Approach borrowed from virt-what.
  * Backport from trunk:
    - When a source pipeline dies, make sure to drain its output before
      discarding its output file descriptor (closes: #548153).

 -- Colin Watson <cjwatson@debian.org>  Thu, 24 Sep 2009 13:38:56 +0100

man-db (2.5.6-2) unstable; urgency=low

  * Don't try to change I/O priority in a vserver (closes: #544999).

 -- Colin Watson <cjwatson@debian.org>  Sun, 06 Sep 2009 23:37:01 +0100

man-db (2.5.6-1) unstable; urgency=low

  * New upstream release:
    - Implement 'man -K', which was the last major remaining missing feature
      when comparing man-db with the man package (closes: #135926, LP:
      #390575).
    - Note that the exact rendering of (e.g.) italic text may vary depending
      on the output device (closes: #516808).
    - Don't create unnecessary database directories (closes: #472919).